<resources>
    <string name="register_nick_hint">nick</string>
    <string name="login_nick_hint">nick / email</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="birthyear_hint">birthyear</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="reminder_hint">forgot password?</string>
    <string name="no_internet_info">No internet connection!</string>
    <string name="upload_progress">Your moment is being uploaded...</string>
    <string name="upload_success">Moment uploaded! New galleries unlocked!</string>
    <string name="upload_error">Oops... upload failed. Check out profile tab to retry.</string>
    <string name="upload_cancelled">Oops... upload cancelled. Check out profile tab to retry.</string>
    <string name="error_bad_request">Bad request!</string>
    <string name="error_credentials">Wrong credentials!</string>
    <string name="error_nick_taken">Nick taken</string>
    <string name="error_email_taken">Email taken</string>
    <string name="error_wrong_nick">Nick can include only alphanumerical characters</string>
    <string name="error_short_nick">Too short nick</string>
    <string name="error_wrong_password">Password must contain at least one letter and digit</string>
    <string name="error_not_matching_passwords">Passwords do not match</string>
    <string name="error_short_password">Too short password</string>
    <string name="error_wrong_email">Wrong email</string>
    <string name="error_wrong_birthyear">Wrong birthyear</string>
    <string name="error_event_upload">You\'ve already participated in this event</string>
    <string name="error_session_upload">You\'ve already uploaded Your moment</string>
    <string name="error_no_sessions">There is no available galleries to download</string>
    <string name="error_like">Error during voting, try again later</string>
    <string name="error_unlike">Error during unvoting, try again later</string>
    <string name="error_register">Error occurred, try again later</string>
    <string name="error_observe">Error during observing, try again later</string>
    <string name="error_unobserve">Error during removing observation, try again later</string>
    <string name="error_no_profile">Error, no such profile</string>
    <string name="error_server">Internal server error</string>
    <string name="report_user_image">Report</string>
    <string name="unknown_country">Unknown</string>
    <string name="logout_confirmation_title">Logout</string>
    <string name="logout_confirmation_message">Are You sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="settings_myaccount">My account</string>
    <string name="settings_observations">Observations</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_change_email">Change email</string>
    <string name="settings_phone_number">Add phone number</string>
    <string name="settings_application">Application</string>
    <string name="settings_rate">Rate us</string>
    <string name="settings_privacy">Privacy policy</string>
    <string name="settings_terms">Terms of use</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_image_effects">Images movement effect</string>
    <string name="settings_email_choose">Choose application</string>
    <string name="camera_permissions_fail">Accept camera and microphone permissions to capture moments!</string>
    <string name="send_confirmation_title">Upload Your moment</string>
    <string name="send_confirmation_message">Are You sure?</string>
    <string name="understood">UNDERSTOOD</string>
    <string name="observations_tutorial_no_observations">You haven\'t added any observations yet...\n\nTo observe Flashbomb\'s profiles, tap on loupe and start typing.</string>
    <string name="observations_tutorial_no_bombs">Nobody has participated in this FLASHTIME with You.</string>
    <string name="already_observing">You already observe this profile</string>
    <string name="can_observe">Add observations</string>
    <string name="repassword_hint">re-password</string>
    <string name="camera_capture_tutorial">Hold to capture video</string>
    <string name="app_outdated_info">This app version is outdated.\nPlease install new version.\nSorry for Your inconvenience.</string>
    <string name="app_outdated_button">DOWNLOAD</string>
    <string name="account_not_verified_info">Please, verify Your email address to use Flashbomb.\nWe\'ve sent activation link to: {1}.\nIf You\'ve already activated Your account, restart Flashbomb and enjoy!</string>
    <string name="account_not_verified_button_resend_text">RESEND</string>
    <string name="account_not_verified_button_login_text">REGISTER AGAIN</string>
    <string name="report_label0">Violence or harmful behaviour</string>
    <string name="report_label1">Spam or scam</string>
    <string name="report_label2">Hate speech or personal attack</string>
    <string name="report_label3">Sexually explicit content</string>
    <string name="thank_you">Thank You!</string>
    <string name="report_info">Your report will be investigated</string>
    <string name="error_change_password">Error during password changing</string>
    <string name="error_report">Error during reporting</string>
    <string name="error_multiple_report">You\'ve already reported this content</string>
    <string name="blacklist_tutorial">On this page, You can hide Your content from Your observers. Now, no one observes Your profile.</string>
    <string name="password_recovery_info_title">Password recovery</string>
    <string name="password_recovery_info_content">To recovery Your password, type Your nick or email.</string>
    <string name="password_recovery_nick_content">Password recovery link will be sent to email associated with nick: {1}</string>
    <string name="password_recovery_email_content">Password recovery link will be sent to email: {1}</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="password_recovery_info_success">Follow instructions in received email.</string>
    <string name="error_user_not_found">User with given nick / email not found</string>
    <string name="activation_resend_title">Are You sure?</string>
    <string name="activation_resend_content">Activation email will be sent to: {1}.</string>
    <string name="activation_resend_success_title">Confirmation</string>
    <string name="activation_resend_success_content">Activation email sent.</string>
    <string name="server_activation_mail_fail">Error during sending activation mail. Please try again later.</string>
    <string name="server_recovery_mail_fail">Error during sending recovery email. Please try again later.</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password_wrong">Your old password is incorrect</string>
    <string name="new_password_wrong_structure">New password must contain at least one letter and digit</string>
    <string name="change_password_same_password">New password can\'t be the same as the old one</string>
    <string name="new_password_short">New password is too short</string>
    <string name="change_password_confirmation_title">Are You sure?</string>
    <string name="change_password_confirmation_content">Do You want to change Your password?</string>
    <string name="change_password_success_title">Confirmation</string>
    <string name="change_passsword_success_content">Your password has been changed</string>
    <string name="error_reveal">Error during winner\'s reveal</string>
    <string name="error_hide">Error during hiding</string>
    <string name="error_unhide">Error during unhiding</string>
    <string name="error_checksession">Error during checking current session</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="late_notification_info">You\'ve missed FLASHTIME at {1}</string>
    <string name="late_notification_next_info">Psst... next one around {1}</string>
    <string name="late_notification_next_info_unknown">Don\'t miss next one :)</string>
    <string name="camera_filters_tutorial">Tap on the right or left side to switch filters</string>
    <string name="settings_vibrations">Vibration in notifications</string>
    <string name="settings_best_anonymous">Be anonymous in winners gallery</string>
    <string name="unknown_nick">Unknown author</string>
    <string name="error_best_anonymous">Error during getting anonymous</string>
    <string name="error_best_non_anonymous">Error during getting non anonymous</string>
    <string name="error_add_fan">Error during joining group</string>
    <string name="error_remove_fan">Error during leaving group</string>
    <string name="error_get_influencer_gallery_no_sessions">This influencer has no sessions yet</string>
    <string name="error_get_influencer_gallery_not_member">You are not member of this group</string>
    <string name="download_complete_info">Moment downloaded to device\'s gallery</string>
    <string name="download_error_info">Moment downloading failed</string>
    <string name="save_permission_fail">Accept write external storage permission to download moments!</string>
    <string name="tutorial_hello">Remember...\n\nIf u need some instructions - shake the phone I will appear like GIN from the bottle...\n\nShake the phone now :)</string>
    <string name="tutorial_home">Main gallery\n\nYou will find photos taken during the last FLASHTIME you have taken part in here. You can browse through the photos, like your favorite ones, and report those, which you think breach our terms and conditions.</string>
    <string name="tutorial_best">Hall of fame\n\nYou will find best photos taken during the consecutive FLASHTIME periods here. Tap to check them out. Hold to see the number of likes.</string>
    <string name="tutorial_observations">Followed\n\nHere you can check photos taken during the FLASHTIME by users you follow only. To add a new profile, just click the magnifying glass icon and type in the name of the profile.</string>
    <string name="tutorial_influencers">Unspecified card\n\nYou will find something exceptional here soon</string>
    <string name="tutorial_profile">Profile\n\nBy taking advantage of this section, you can check how many followers you currently have and in how many FLASHTIME events you have participated. You can also view all the photos taken and download them.</string>
    <string name="tutorial_blacklist">Blacklist\n\nIn this section, you can check names of users following you. You can also hide your profile from some users, preventing them from seeing your content.</string>
    <string name="tutorial_settings">Settings\n\nI think that this section is pretty obvious. Just choose the desired option.</string>
    <string name="tutorial_influencer_gallery">Influencer\'s gallery\n\nThere You can find Your favourite influencer\'s personal FLASHTIME gallery.</string>
    <string name="tutorial_observations_management">Manage followed profiles\n\nHere you can manage profiles you have decided to follow.</string>
    <string name="tutorial_change_password">Change password\n\nYou can change your password here.</string>
    <string name="tutorial_faq">FAQ\n\nIn this section, you can check answers to most common questions asked about the application.</string>
    <string name="tutorial_wait_for_flashtime">Camera will be unlocked for 3 minutes when You receive next FLASHTIME notification!\n\nNext global FLASHTIME will begin shortly :)\n\nStay calm and explore latest FLASHTIME moments.</string>
</resources>