<!-- fragment_screen_slide_page.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/changePasswordTopBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1047"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/changePasswordBackButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="back"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/changePasswordMainIcon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_lock"
            android:tint="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7906"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"/>

            <EditText
                android:id="@+id/oldPassword"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="30"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/old_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/change_password_edittext_shape"
                android:textSize="@dimen/normal_textview" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/newPassword"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="30"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/new_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/change_password_edittext_shape"
                android:textSize="@dimen/normal_textview" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

    </LinearLayout>

    <TextView
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1047"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_textview"
        android:gravity="center"
        android:text="@string/change_password"
        android:onClick="ChangePassword"/>

</LinearLayout>